Actualizacion de Progress Bar
No llegaba al 0 y ahora si xd

--- a/UnrealProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -209,10 +209,8 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Scripts/TargetDmg.TargetDmg
-OpenAssetsAtExit=/Game/Scripts/BarComponent.BarComponent
 OpenAssetsAtExit=/Game/Scripts/Bar.Bar
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile.BP_FirstPersonProjectile
+OpenAssetsAtExit=/Game/Scripts/TargetDmg.TargetDmg
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=False
@@ -1742,10 +1740,10 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 WidgetComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem0=/Game/Scripts/TargetDmg
 MRUItem1=/Game/Scripts/Bar
-MRUItem2=/Game/Scripts/BarComponent
-MRUItem3=/Game/Scripts/TargetDmg
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem3=/Game/Scripts/BarComponent
 MRUItem4=/Game/Scripts/BarWidget
 MRUItem5=/Game/Scripts/TargetType
 MRUItem6=/Game/Scripts/Target
@@ -1845,8 +1843,8 @@ Widget=
 Visual=
 ProgressBar="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 ChildActorComponent="\"Object.AssetUserData.AssetUserData\" "
-SceneComponent="\"Object.AssetUserData.AssetUserData\" "
-ActorComponent="\"Object.AssetUserData.AssetUserData\" "
+SceneComponent=
+ActorComponent=
 StaticMeshComponent="\"Object.AssetUserData.AssetUserData\" "
 MeshComponent="\"Object.AssetUserData.AssetUserData\" "
 PrimitiveComponent="\"Object.AssetUserData.AssetUserData\" "
