Teleport spawn (prueba)

--- a/UnrealProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,7 +160,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 2.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 2.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Scripts
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -209,6 +209,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -227,7 +228,7 @@ StaticMeshActor.Cooking=False
 StaticMeshActor.Replication=False
 StaticMeshActor.Networking=False
 StaticMeshActor.WorldPartition=False
-StaticMeshActor.Actor=False
+StaticMeshActor.Actor=True
 BP_Pickup_Rifle_C.TransformCommon=True
 BP_Pickup_Rifle_C.Rendering=True
 BP_Pickup_Rifle_C.Replication=True
@@ -718,6 +719,32 @@ TextRenderActor.Networking=True
 TextRenderActor.WorldPartition=True
 TextRenderActor.Input=True
 TextRenderActor.Actor=True
+BP_Spawn_C.Tick=True
+BP_Spawn_C.Replication=True
+BP_Spawn_C.Rendering=True
+BP_Spawn_C.Collision=True
+BP_Spawn_C.Actor=True
+BP_Spawn_C.Input=True
+BP_Spawn_C.HLOD=True
+BP_Spawn_C.Physics=True
+BP_Spawn_C.WorldPartition=True
+BP_Spawn_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+BP_FirstPersonGameMode_C.Tick=True
+BP_FirstPersonGameMode_C.Classes=True
+BP_FirstPersonGameMode_C.Game=True
+BP_FirstPersonGameMode_C.GameMode=True
+BP_FirstPersonGameMode_C.Physics=True
+BP_FirstPersonGameMode_C.Events=True
+BP_Spawn_C.TransformCommon=True
+BP_Spawn_C.Networking=True
+BP_Spawn_C.Default=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -733,7 +760,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=32.000 Y=0.000
+ScreenPosition=X=40.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1871,26 +1898,41 @@ MaterialInstanceConstant=
 SkeletalMeshComponent=DirectionalLight.TransformCommon.Transform
 Bar_C=DirectionalLight.TransformCommon.Transform
 Blueprint=DirectionalLight.TransformCommon.Transform
+BP_FirstPersonCharacter_C=DirectionalLight.TransformCommon.Transform
+K2Node_InputKey=DirectionalLight.TransformCommon.Transform
+BP_Spawn_C=DirectionalLight.TransformCommon.Transform
+PropertyWrapper=DirectionalLight.TransformCommon.Transform
+K2Node_VariableGet=DirectionalLight.TransformCommon.Transform
+K2Node=DirectionalLight.TransformCommon.Transform
+BillboardComponent=DirectionalLight.TransformCommon.Transform
+K2Node_VariableSet=DirectionalLight.TransformCommon.Transform
+TargetDmg_C=DirectionalLight.TransformCommon.Transform
+BP_FirstPersonProjectile_C=
+PlayerStart=DirectionalLight.TransformCommon.Transform
+CapsuleComponent=DirectionalLight.TransformCommon.Transform
+BP_FirstPersonGameMode_C=DirectionalLight.TransformCommon.Transform
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Scripts/TargetDmg
-MRUItem1=/Game/Scripts/Bar
-MRUItem2=/Game/Scripts/BarComponent
-MRUItem3=/Game/Materials/MI_Moon
-MRUItem4=/Game/Materials/M_Moon2
-MRUItem5=/Game/Materials/M_Moon
-MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem7=/Game/Scripts/BarWidget
-MRUItem8=/Game/Scripts/TargetType
-MRUItem9=/Game/Scripts/Target
-MRUItem10=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem11=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem12=/Game/FPWeapon/Mesh/SK_FPGun
-MRUItem13=/Game/FPWeapon/Materials/FirstPersonProjectileMaterial
-MRUItem14=/Game/FirstPerson/Input/Actions/IA_Shoot
-MRUItem15=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
-MRUItem16=/Game/FPWeapon/Audio/FirstPersonTemplateWeaponFire02
-MRUItem17=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Blueprints/BP_Spawn
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem4=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem5=/Game/Scripts/TargetDmg
+MRUItem6=/Game/Scripts/Bar
+MRUItem7=/Game/Scripts/BarComponent
+MRUItem8=/Game/Materials/MI_Moon
+MRUItem9=/Game/Materials/M_Moon2
+MRUItem10=/Game/Materials/M_Moon
+MRUItem11=/Game/Scripts/BarWidget
+MRUItem12=/Game/Scripts/TargetType
+MRUItem13=/Game/Scripts/Target
+MRUItem14=/Game/FPWeapon/Mesh/SK_FPGun
+MRUItem15=/Game/FPWeapon/Materials/FirstPersonProjectileMaterial
+MRUItem16=/Game/FirstPerson/Input/Actions/IA_Shoot
+MRUItem17=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
+MRUItem18=/Game/FPWeapon/Audio/FirstPersonTemplateWeaponFire02
+MRUItem19=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap:PersistentLevel.FirstPersonMap=0
@@ -1906,9 +1948,11 @@ MRUItem17=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
 /Game/Scripts/Bar.Bar=0
 /Game/Scripts/TargetDmg.TargetDmg=0
 /Game/Scripts/BarComponent.BarComponent=0
-/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile.BP_FirstPersonProjectile=0
+/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile.BP_FirstPersonProjectile=1
 /Game/Materials/M_Moon.M_Moon=0
 /Game/Materials/M_Moon2.M_Moon2=0
+/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode=0
+/Game/Blueprints/BP_Spawn.BP_Spawn=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1957,7 +2001,7 @@ GraphEditorQuickJumps=()
 
 [DetailCategoriesAdvanced]
 StaticMesh.Collision=True
-PropertyWrapper.Variable=False
+PropertyWrapper.Variable=True
 Blueprint.ClassOptions=True
 ChildActorComponent.AssetUserData=True
 ChildActorComponent.Rendering=True
@@ -1969,6 +2013,9 @@ CanvasPanel.Behavior=True
 WidgetComponent.Collision=False
 StaticMeshActor.Physics=True
 ProgressBar.Accessibility=False
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Actor=True
+K2Node_VariableGet.Variable=True
 
 [DetailPropertyExpansion]
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
@@ -1985,8 +2032,8 @@ ChildActorComponent="\"Object.AssetUserData.AssetUserData\" "
 SceneComponent=
 ActorComponent=
 StaticMeshComponent="\"Object.AssetUserData.AssetUserData\" "
-MeshComponent="\"Object.AssetUserData.AssetUserData\" "
-PrimitiveComponent="\"Object.AssetUserData.AssetUserData\" "
+MeshComponent=
+PrimitiveComponent=
 WidgetComponent="\"Object.AssetUserData.AssetUserData\" "
 BarComponent_C=
 UserWidget=
@@ -2245,6 +2292,7 @@ TreeViewWidth=0.300000
 DeleteConfirmationVariable_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_Spawn.BP_Spawn;
 RecentlyPlaced=/Game/Materials/MI_Moon.MI_Moon;
 RecentlyPlaced=/Game/Materials/M_Moon2.M_Moon2;
 RecentlyPlaced=/Game/Materials/M_Moon.M_Moon;
@@ -2253,8 +2301,8 @@ RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
-RecentlyPlaced=/Game/Scripts/Bar.Bar;
-RecentlyPlaced=/Game/Scripts/TargetDmg.TargetDmg;
+RecentlyPlaced=/Game/Blueprints/Bar.Bar;
+RecentlyPlaced=/Game/Blueprints/TargetDmg.TargetDmg;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
