--- a/UnrealProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -161,7 +161,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 2.Viewport3",ConfigSettin
 GridEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Synty/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -235,10 +235,6 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Synty/Animations/BS_Warrior.BS_Warrior
-OpenAssetsAtExit=/Game/Synty/Animations/ABP_SyntySoldier.ABP_SyntySoldier
-OpenAssetsAtExit=/Game/Blueprints/TargetDmg.TargetDmg
-OpenAssetsAtExit=/Game/Synty/Blueprints/BP_BasicEnemy.BP_BasicEnemy
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2109,9 +2105,9 @@ PinnedCommandList.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Games/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files (x86)/Unreal/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
