--- a/UnrealProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -235,9 +235,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_Weapon_Component.BP_Weapon_Component
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle.BP_Pickup_Rifle
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode
+OpenAssetsAtExit=/Game/Blueprints/BP_Spawn.BP_Spawn
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
@@ -1151,6 +1149,22 @@ CameraComponent.PostProcess=True
 CameraComponent.Tags=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.ComponentTick=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.RayTracing=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Tags=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Cooking=True
+PointLightComponent.Events=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1166,8 +1180,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=479.000 Y=272.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=478.400 Y=272.000
+WindowSize=X=1281.600 Y=721.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2240,9 +2254,9 @@ PinnedCommandList.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files (x86)/Unreal/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Games/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files (x86)/Unreal/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2306,7 +2320,7 @@ Advanced=False
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings
 WidgetComponent=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 DirectionalLight=DirectionalLight.TransformCommon.Transform
-SceneComponent=
+SceneComponent=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,SphereComponent.Collision.Collision
 BP_Sky_Sphere_C=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform
 StaticMeshActor=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,SphereComponent.Collision.Collision
 MaterialInstanceConstant=
@@ -2315,7 +2329,7 @@ Bar_C=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.Constra
 Blueprint=DirectionalLight.TransformCommon.Transform
 BP_FirstPersonCharacter_C=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 K2Node_InputKey=DirectionalLight.TransformCommon.Transform
-BP_Spawn_C=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform
+BP_Spawn_C=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 PropertyWrapper=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 K2Node_VariableGet=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 K2Node=DirectionalLight.TransformCommon.Transform
@@ -2341,7 +2355,7 @@ Turret_C=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.Cons
 ProgressBar=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 BarComponent_C=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 K2Node_Variable=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
-K2Node_MacroInstance=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision
+K2Node_MacroInstance=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 MeshComponent=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 Actor=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 StaticMeshComponent=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform
@@ -2361,28 +2375,29 @@ GameSession=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.C
 GameStateBase=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 PlayerState=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 CameraComponent=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Collision.Collision
+PointLightComponent=DirectionalLight.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,BP_BasicEnemy_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/TargetDmg
-MRUItem1=/Game/Blueprints/Bar
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem5=/Game/Blueprints/Turret
-MRUItem6=/Game/FPWeapon/Materials/M_FPGun
-MRUItem7=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem8=/Game/Materials/ForceField1
-MRUItem9=/Game/Materials/ForceField
-MRUItem10=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
-MRUItem11=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark2
-MRUItem12=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem13=/Game/LevelPrototyping/Materials/MI_Solid_Green
-MRUItem14=/Game/LevelPrototyping/Materials/MI_Solid_Red
-MRUItem15=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_Red2
-MRUItem16=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark1
-MRUItem17=/Game/Blueprints/BarComponent
-MRUItem18=/Engine/EngineMaterials/Widget3DPassThrough_Masked_OneSided
-MRUItem19=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_Gray
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Blueprints/BP_Spawn
+MRUItem2=/Game/Blueprints/TargetDmg
+MRUItem3=/Game/Blueprints/Bar
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem6=/Game/Blueprints/Turret
+MRUItem7=/Game/FPWeapon/Materials/M_FPGun
+MRUItem8=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem9=/Game/Materials/ForceField1
+MRUItem10=/Game/Materials/ForceField
+MRUItem11=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
+MRUItem12=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark2
+MRUItem13=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem14=/Game/LevelPrototyping/Materials/MI_Solid_Green
+MRUItem15=/Game/LevelPrototyping/Materials/MI_Solid_Red
+MRUItem16=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_Red2
+MRUItem17=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark1
+MRUItem18=/Game/Blueprints/BarComponent
+MRUItem19=/Engine/EngineMaterials/Widget3DPassThrough_Masked_OneSided
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap:PersistentLevel.FirstPersonMap=0
@@ -2520,7 +2535,7 @@ Turret_C.Actor=True
 [DetailPropertyExpansion]
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 StreamableRenderAsset=
-Object="\"Object\" "
+Object="\"Object\" \"Object.AssetUserData.AssetUserData\" "
 InputAction="\"Object.Action.Triggers\" \"Object.Input.Input|Settings\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -2529,11 +2544,11 @@ Widget="\"Object\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Render Tra
 Visual="\"Object\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransform.Scale\" "
 ProgressBar="\"Object\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransform.Scale\" "
 ChildActorComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
+ActorComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
 StaticMeshComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
 MeshComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
-PrimitiveComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
 WidgetComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
 BarComponent_C="\"Object\" "
 UserWidget="\"Object\" "
@@ -2607,6 +2622,11 @@ MaterialExpression="\"Object\" "
 MaterialExpressionVectorParameter="\"Object\" "
 MaterialExpressionParameter="\"Object\" "
 CameraComponent="\"Object\" "
+K2Node_InputKey="\"Object\" "
+PointLightComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
+LocalLightComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
+LightComponent="\"Object\" \"Object.AssetUserData.AssetUserData\" "
+LightComponentBase="\"Object\" \"Object.AssetUserData.AssetUserData\" "
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2867,6 +2887,7 @@ DeleteConfirmationVariable_Warning=False
 DeleteConfirmationFunction_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_Spawn.BP_Spawn;
 RecentlyPlaced=/Game/Blueprints/Turret.Turret;
 RecentlyPlaced=/Game/LevelPrototyping/Meshes/SM_Cylinder.SM_Cylinder;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -2883,7 +2904,6 @@ RecentlyPlaced=/Game/Synty/Animations/ABP_SyntyAnim.ABP_SyntyAnim;
 RecentlyPlaced=/Game/Synty/Animations/SoldilerBlueprint.SoldilerBlueprint;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/PolygonFantasyRivals/Meshes/Characters/SK_BR_Character_BarbarianGiant_01.SK_BR_Character_BarbarianGiant_01;
-RecentlyPlaced=/Game/Blueprints/BP_Spawn.BP_Spawn;
 RecentlyPlaced=/Game/Materials/MI_Moon.MI_Moon;
 RecentlyPlaced=/Game/Materials/M_Moon2.M_Moon2;
 RecentlyPlaced=/Game/Materials/M_Moon.M_Moon;
@@ -3014,4 +3034,7 @@ bHideUnrelatedNodes=False
 PropertyEditorToolkit_PinAsColumnHeader=24
 Property=0.5
 Value=1
+
+[PluginBrowser]
+InstalledPlugins=WMFCodecs
 
